src/test/resources/public/input/typechecking/pass/pass07.jova
class Tmp {
    Tmp() {

    }

    Tmp(int test) {
        String hallo;
    }

    Tmp (String s) {
        String hallo;
    }
}