src/test/resources/public/input/typechecking/fail/double_decl/fail04.jova
class Test{

}

class Test{
  
}

class Main {

  public int main() {

    return 0;
  }

}